fix: apply margin changes to quiz box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,14 +72,6 @@ li {
     color: #93102d !important;
 }
 
-.indent-para {
-    padding-left: 40px;
-}
-
-ul.myth,  .home > li {
-    margin-left: 40px;
-}
-
 li {
     margin-right: 20px;
 }
@@ -99,6 +91,12 @@ li {
 .logo-img {
     max-height: 150px;
     max-width: 150px;
+}
+
+.quiz-img {
+    width: 100%;
+    padding: 0% 15%;
+    height: auto;
 }
 
 .img {
@@ -240,7 +238,7 @@ li {
     margin: 0 auto 10%;
     border: solid 10px #8913b0;
     border-radius: 10px;
-    padding: 25px;
+    padding: 15px;
 }
 
 .quizmain h1 {
@@ -258,10 +256,6 @@ li {
 
 .text-left {
     text-align: left !important;
-}
-
-.myquiz {
-    padding: 20px 0;
 }
 
 .myquiz h2{
@@ -685,7 +679,7 @@ a {
 @media  (min-width: 327px) and (max-width: 767px) {
     .myth-card {
         width: 800px;
-        height: 800px;
+        height: 623px;
     }
 }
 
